# Android-Linux-Tools

./: Cargo.toml  LICENSE  README-CN.md  README.md
.github/: bot.py
.github/workflows/: ci.yml  pr.yml  release.yml
src/: cli.rs  main.rs  useradd.sh  utils.rs
src/config/: mod.rs
src/utils/: chroot.rs  mod.rs
src/utils/compress/: tar.rs  zip.rs
