[package]
name = "alt"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = "1.1.4"
libc = "0.2.177"
serde = { version = "1.0.228", features = ["serde_derive"] }
tar = "0.4.44"
toml = "0.9.7"
user = "0.1.1"
xz2 = "0.1.7"
zip = { version = "5.1", default-features = false, features = ["deflate"] }
zip-extensions = "0.8.3"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[profile.dev]
opt-level = "z"
lto = "thin"
panic = "abort"
